// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should have a flat array of all known React Native props 1`] = `
Array [
  "alignContent",
  "alignItems",
  "alignSelf",
  "flex",
  "flexBasis",
  "flexDirection",
  "flexGrow",
  "flexWrap",
  "flexShrink",
  "justifyContent",
  "rowGap",
  "columnGap",
  "gap",
  "borderWidth",
  "borderBottomWidth",
  "borderLeftWidth",
  "borderRightWidth",
  "borderTopWidth",
  "borderRadius",
  "borderBottomLeftRadius",
  "borderBottomRightRadius",
  "borderTopLeftRadius",
  "borderTopRightRadius",
  "borderColor",
  "borderLeftColor",
  "borderRightColor",
  "borderTopColor",
  "borderBottomColor",
  "borderBlockColor",
  "borderStyle",
  "position",
  "bottom",
  "left",
  "right",
  "top",
  "zIndex",
  "display",
  "height",
  "minHeight",
  "maxHeight",
  "width",
  "minWidth",
  "maxWidth",
  "overflow",
  "margin",
  "marginBottom",
  "marginLeft",
  "marginRight",
  "marginTop",
  "padding",
  "paddingBottom",
  "paddingLeft",
  "paddingRight",
  "paddingTop",
  "transform",
  "transformOrigin",
  "backfaceVisibility",
  "background",
  "backgroundColor",
  "color",
  "opacity",
  "fontFamily",
  "fontSize",
  "fontStyle",
  "fontWeight",
  "fontVariant",
  "lineHeight",
  "textAlign",
  "textDecorationLine",
  "textDecorationColor",
  "textDecorationStyle",
  "textTransform",
  "letterSpacing",
  "userSelect",
  "direction",
  "end",
  "start",
  "elevation",
  "borderEndWidth",
  "borderStartWidth",
  "borderStartColor",
  "borderEndColor",
  "borderBottomEndRadius",
  "borderBottomStartRadius",
  "borderTopEndRadius",
  "borderTopStartRadius",
  "borderBlockEndColor",
  "borderBlockStartColor",
  "borderEndEndRadius",
  "borderEndStartRadius",
  "borderStartEndRadius",
  "borderStartStartRadius",
  "textAlignVertical",
  "textShadowColor",
  "textShadowOffset",
  "textShadowRadius",
  "shadowColor",
  "shadowOffset",
  "shadowOpacity",
  "shadowRadius",
  "marginHorizontal",
  "marginVertical",
  "marginEnd",
  "marginStart",
  "paddingHorizontal",
  "paddingVertical",
  "paddingEnd",
  "paddingStart",
  "resizeMode",
  "tintColor",
  "overlayColor",
  "writingDirection",
  "includeFontPadding",
  "aspectRatio",
]
`;

exports[`should have a flat array of all known css-to-react-native props 1`] = `
Array [
  "alignContent",
  "alignItems",
  "alignSelf",
  "flex",
  "flexBasis",
  "flexDirection",
  "flexGrow",
  "flexWrap",
  "flexShrink",
  "justifyContent",
  "rowGap",
  "columnGap",
  "gap",
  "borderWidth",
  "borderBottomWidth",
  "borderLeftWidth",
  "borderRightWidth",
  "borderTopWidth",
  "borderRadius",
  "borderBottomLeftRadius",
  "borderBottomRightRadius",
  "borderTopLeftRadius",
  "borderTopRightRadius",
  "borderColor",
  "borderLeftColor",
  "borderRightColor",
  "borderTopColor",
  "borderBottomColor",
  "borderBlockColor",
  "borderStyle",
  "position",
  "bottom",
  "left",
  "right",
  "top",
  "zIndex",
  "display",
  "height",
  "minHeight",
  "maxHeight",
  "width",
  "minWidth",
  "maxWidth",
  "overflow",
  "margin",
  "marginBottom",
  "marginLeft",
  "marginRight",
  "marginTop",
  "padding",
  "paddingBottom",
  "paddingLeft",
  "paddingRight",
  "paddingTop",
  "transform",
  "transformOrigin",
  "backfaceVisibility",
  "background",
  "backgroundColor",
  "color",
  "opacity",
  "fontFamily",
  "fontSize",
  "fontStyle",
  "fontWeight",
  "fontVariant",
  "lineHeight",
  "textAlign",
  "textDecorationLine",
  "textDecorationColor",
  "textDecorationStyle",
  "textTransform",
  "letterSpacing",
  "userSelect",
  "direction",
  "end",
  "start",
  "elevation",
  "borderEndWidth",
  "borderStartWidth",
  "borderStartColor",
  "borderEndColor",
  "borderBottomEndRadius",
  "borderBottomStartRadius",
  "borderTopEndRadius",
  "borderTopStartRadius",
  "borderBlockEndColor",
  "borderBlockStartColor",
  "borderEndEndRadius",
  "borderEndStartRadius",
  "borderStartEndRadius",
  "borderStartStartRadius",
  "textAlignVertical",
  "textShadowColor",
  "textShadowOffset",
  "textShadowRadius",
  "shadowColor",
  "shadowOffset",
  "shadowOpacity",
  "shadowRadius",
  "marginHorizontal",
  "marginVertical",
  "marginEnd",
  "marginStart",
  "paddingHorizontal",
  "paddingVertical",
  "paddingEnd",
  "paddingStart",
  "resizeMode",
  "tintColor",
  "overlayColor",
  "writingDirection",
  "includeFontPadding",
  "aspectRatio",
  "border",
  "boxShadow",
  "flexFlow",
  "font",
  "textDecoration",
  "textShadow",
  "placeContent",
]
`;
